# shallenge

./: .gitignore  CMakeLists.txt  Makefile  helper.cuh  main.cu  sha256.cuh
